--- a/css/sheet1.css
+++ b/css/sheet1.css
@@ -1,3 +1,10 @@
+.extreme {
+    color: orange;
+    font-size: 40px;
+    border: 3px solid green;
+    border-radius: 30px;
+}
+
 h1 {
     color: orange;
     font-family: Ubuntu;
@@ -55,4 +62,50 @@ p {
     margin: 0 12.5%;
     font-family: "Times New Roman", Courier;
     font-style: italic;
+}
+
+
+.content {
+    text-align: right;
+    margin-right: 30%;
+}
+
+
+.prose {
+    font-family; "Times New Roman";
+    padding: 10px;
+    max-width: 75%;
+    margin-right: 0%;
+}
+
+
+li {
+    display: inline;
+    border: 2px solid red;
+    margin: 3px 2px 10px;
+    padding: 10px;
+    font-size: 18px;
+    text-align: right;
+}
+
+
+.navzone {
+    font-family: Courier;
+    color: #A5CC6B;
+    text-align: center;
+}
+
+
+#tehlulz {
+    padding: 15px;
+}
+
+#tehlulz a{
+    color: green;
+}
+
+
+.content {
+    text-align: right;
+    margin-right: 30%;
 }
